<resources>
    <string name="app_name">Trik Tak</string>
    <string name="titulo">Trik Tak</string>
    <string name="creador">Deiby Alejandro Ramirez Galvis</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="Unirse">Unirse a Partida</string>
    <string name="Crear">Crear una Partida</string>
    <string name="local">Partida Local</string>
    <string name="online">Partida Online</string>
    <string name="local_2p">2 Jugadores</string>
    <string name="local_AI"> Jugador VS IA</string>
    <string name="comparte">Usa el código de partida que te compartierón para que puedas unirte a su partida...</string>
    <string name="registro">Registra tus Datos</string>
    <string name="login">Iniciar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="ingresar">Ingresar</string>
    <string name="volverLogin">Login</string>
    <string name="personalizar">Personalizar</string>
    <string name="guardar">Guardar</string>
    <string name="recargar">Recargar</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="nombre">Nombre </string>
    <string name="nombre_usuario">nombre del usuario</string>
    <string name="boton_perfil">Perfil de usuario</string>
    <string name="hint_mensaje">Escribe un mensaje...</string>
    <string name="descripcion_enviar">Enviar mensaje</string>
    <string name="Chat_Global">Chat Global</string>
    <string name="Chatear">Chatear</string>
    <string name="partida"> Jugar Partida</string>
    <string name="continuar"> Continuar</string>
    <string name="anuncio"> Mirar Anuncio</string>
    <string name="instrucciones">
    El desafío consta de 4 niveles progresivos.\n\n
    Tu misión es completar un 3 en raya en cada uno para superar el reto.\n\n

    Nivel 1: Tablero 3x3 con límite de 20 seg.\n
    Nivel 2: Tablero 3x3 con límite de 15 seg.\n
    Nivel 3: Tablero 4x4 con límite de 10 seg.\n
        Nivel 4: Tablero 5x5 con límite de 5 seg.\n\n

    La IA será más agresiva y no te dará respiro.\n

    Si fallas en cualquier nivel, volverás al nivel inicial.\n\n
    Completa los 3 niveles consecutivos para obtener una recompensa especial.
</string>


</resources>