<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f2"
    android:orientation="vertical"
    tools:context=".PaginaPrincipal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/luckiestguy_regular"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="2"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/botonUnirse"
            style="@style/Botones"
            android:text="@string/Unirse" />

        <Button
            android:id="@+id/botonCrear"
            style="@style/Botones"
            android:text="@string/Crear" />

    </GridLayout>


</LinearLayout>