<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".PaginaBienvenida">

    <!-- Sección superior con nombre + avatar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/botonpersonalizar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_white"
            android:src="@drawable/personalizar"
            android:scaleType="centerInside"
            android:contentDescription="fefa"
            android:padding="6dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/luckiestguy_regular"
        android:text="@string/titulo"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:background="@drawable/fondo_titulo"
        android:textColor="?attr/colorTitulo"
        android:textSize="50sp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111" />



    <!-- Título del chat -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/luckiestguy_regular"
        android:textColor="?attr/colorTitulo"
        android:background="@drawable/fondo_titulo"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/Chat_Global" />

    <!-- CHAT CON SCROLL -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/chat_background"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/contenedorChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>

    <!-- Input y botón -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edtMensaje"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/fondo_titulo"
            android:hint="Escribe un mensaje..."
            android:padding="10dp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <ImageButton
            android:id="@+id/btnEnviar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_white"
            android:padding="6dp"
            android:scaleType="centerInside"
            android:src="@drawable/enviar" />
    </LinearLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:columnCount="1"
        android:rowCount="2">

        <Button
            android:id="@+id/botonlocal"
            style="@style/Botones"
            android:text="@string/local" />

        <Button
            android:id="@+id/botononline"
            style="@style/Botones"
            android:text="@string/online" />

    </GridLayout>

</LinearLayout>
