<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/luckiestguy_regular"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="?attr/colorTitulo"
            android:textSize="40sp"
            android:background="@drawable/fondo_titulo"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"/>

        <!-- Contenedor del formulario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp"
            android:elevation="5dp"
            android:clipToOutline="true"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textoInstrucciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/registro"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="Selecciona un avatar para tu perfil:"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:columnCount="4"
                android:rowCount="3"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av1"
                    android:contentDescription="Botón 1" />
                <ImageButton
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av2"
                    android:contentDescription="Botón 2" />
                <ImageButton
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av3"
                    android:contentDescription="Botón 3" />
                <ImageButton
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av4"
                    android:contentDescription="Botón 4" />
                <ImageButton
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av5"
                    android:contentDescription="Botón 5" />
                <ImageButton
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av6"
                    android:contentDescription="Botón 6" />
                <ImageButton
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av7"
                    android:contentDescription="Botón 7" />
                <ImageButton
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av8"
                    android:contentDescription="Botón 8" />
                <ImageButton
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av9"
                    android:contentDescription="Botón 9" />
                <ImageButton
                    android:id="@+id/button10"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av10"
                    android:contentDescription="Botón 10" />
                <ImageButton
                    android:id="@+id/button11"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av11"
                    android:contentDescription="Botón 11" />
                <ImageButton
                    android:id="@+id/button12"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/green_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/av12"
                    android:contentDescription="Botón 12" />
            </GridLayout>

            <!-- Campo Nombre -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                android:layout_marginTop="20dp"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo Correo -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:textColorHint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo Repetir Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repetir_contraseña"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repetirContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón Registrar -->
            <Button
                android:id="@+id/botonRegistrar"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/guardar"
                android:textAllCaps="false"/>

        </LinearLayout>

        <!-- Botón Volver a Login -->
        <Button
            android:id="@+id/botonIrLogin"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volverLogin"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
